# datatoad

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  index.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-4e75cc64.js  searchindex-4e7cf34e.js  searchindex-b0c0ab71.js  searchindex-da115c78.js  toc-209194ab.js  toc-7b8d27c9.js  toc-c330b71a.js  toc.html
.github/workflows/: deploy.yml
chapter_0/: chapter_0.html  chapter_0_1.html  chapter_0_2.html  chapter_0_3.html  chapter_0_4.html
chapter_1/: chapter_1.html  chapter_1_1.html  chapter_1_2.html  chapter_1_3.html  chapter_1_4.html
chapter_2/: chapter_2.html  chapter_2_1.html  chapter_2_2.html  chapter_2_3.html  chapter_2_4.html
chapter_3/: chapter_3.html  chapter_3_1.html  chapter_3_2.html  chapter_3_3.html
chapter_4/: chapter_4.html  chapter_4_1.html  chapter_4_2.html
chapter_5/: chapter_5.html
demo/: datatoad_web.wasm
examples/: bench_sort.rs  scale.rs
mdbook/src/: SUMMARY.md  introduction.md
mdbook/src/chapter_0/: chapter_0.md  chapter_0_1.md  chapter_0_2.md  chapter_0_3.md  chapter_0_4.md
mdbook/src/chapter_1/: chapter_1.md  chapter_1_1.md  chapter_1_2.md  chapter_1_3.md  chapter_1_4.md
mdbook/src/chapter_2/: chapter_2.md  chapter_2_1.md  chapter_2_2.md  chapter_2_3.md  chapter_2_4.md
mdbook/src/chapter_3/: chapter_3.md  chapter_3_1.md  chapter_3_2.md  chapter_3_3.md
mdbook/src/chapter_4/: chapter_4.md  chapter_4_1.md  chapter_4_2.md
mdbook/src/chapter_5/: chapter_5.md
presentation/: slides.html  slides.md
scripts/: andersen.dt  batik-alt.dt  batik.dt  bench.dt  biojava.dt  bipartite-alt.dt  bipartite.dt  crdt-slow.dt  crdt.dt  csda-alt.dt  csda.dt  cspa-alt.dt  cspa.dt  cvc5-alt.dt  cvc5.dt  dyck.dt  galen.dt  polonius-naive-alt.dt  polonius-naive.dt  polonius.dt  polonius2.dt  reach.dt  remy.dt  sg-10k.dt  sg-20k.dt  sg.dt  snomed.dt  tc-10k.dt  tc-20k.dt  tc-alt.dt  tc.dt  z3-alt.dt  z3.dt
src/: comms.rs  facts.rs  join.rs  lib.rs  main.rs  parse.rs  plan.rs
src/facts/: list.rs  mod.rs  radix_sort_metal.metal  radix_sort_metal.rs  store.rs  trie.rs
src/rules/: exec.rs  mod.rs  plan.rs
src/rules/atoms/: anti.rs  data.rs  logic.rs  mod.rs  sum.rs  view.rs
tests/: forest_model.rs
web/: .gitignore  Cargo.toml  arc.csv  galen.mjs  index.html  package-lock.json  package.json  probe.mjs  test.mjs
web/src/: lib.rs
